--- a/style.css
+++ b/style.css
@@ -1,43 +1,17 @@
+
 body {
+    background-color: #1D4221;
     color: white;
-    background: black;
-    margin: 0px;
-}
-header {
-    border-bottom: solid 2px rgb(42, 122, 228);
-    padding: 20px;
-    font-size: 32px;
-    color: rgb(42, 122, 228);
-}
-.chamada {
-    background: rgb(184,156,213);
-    padding-bottom: 80px;
-    padding-top: 80px;
+    font-family: "Bai Jamjuree", sans-serif;
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 700px;
+    margin: 0;
 }
-.chamada-texto {
-    margin-right: 20px;
+
+button {
+    background-color: #64A712;
+    color: white;
+    font-family: "Bai Jamjuree", sans-serif;
 }
-
-h1 {
-    font-size: 40px;
-  }
-  
-  p {
-    font-size: 20px;
-  }
-  img {
-    height: 200px;
-  }
-  .categoria-videos {
-    display: flex;
-    overflow-x: auto;
-    gap: 10px;
-  }
-
-
-.categoria {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
